test/types/single/sungeun/single-cannot-coerce.good
single-cannot-coerce.chpl:3: warning: Initializing a type-inferred variable from a 'single' is deprecated; apply a 'read??()' method to the right-hand side
single-cannot-coerce.chpl:3: error: cannot initialize 'single string' from 'single int(64)' because 'int(64)' is not coercible to 'string'
note: An additional error is hidden. Use --print-additional-errors to see it.
